--- a/src/GUI/AddWaiter.form
+++ b/src/GUI/AddWaiter.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.AddWaiter">
-  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="22" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="MainPanel" layout-manager="GridLayoutManager" row-count="22" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="869" height="693"/>
@@ -82,7 +82,7 @@
           <text value="DNI"/>
         </properties>
       </component>
-      <component id="83d0f" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+      <component id="83d0f" class="javax.swing.JTextField" binding="DNITextField">
         <constraints>
           <grid row="2" column="2" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -102,7 +102,7 @@
           <text value="Nombre"/>
         </properties>
       </component>
-      <component id="96ef8" class="javax.swing.JTextField" binding="textField2" default-binding="true">
+      <component id="96ef8" class="javax.swing.JTextField" binding="NameTextField">
         <constraints>
           <grid row="4" column="2" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -122,7 +122,7 @@
           <text value="Direccion"/>
         </properties>
       </component>
-      <component id="5ac72" class="javax.swing.JTextField" binding="textField3" default-binding="true">
+      <component id="5ac72" class="javax.swing.JTextField" binding="DirectionTextField">
         <constraints>
           <grid row="6" column="2" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -150,7 +150,7 @@
           <text value="Telefono"/>
         </properties>
       </component>
-      <component id="b35b" class="javax.swing.JTextField" binding="textField5" default-binding="true">
+      <component id="b35b" class="javax.swing.JTextField" binding="TlfTextField">
         <constraints>
           <grid row="10" column="2" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -169,7 +169,7 @@
           <text value="Fecha de Contratacion (AAAA/MM/DD)"/>
         </properties>
       </component>
-      <component id="f602e" class="javax.swing.JTextField" binding="textField6" default-binding="true">
+      <component id="f602e" class="javax.swing.JTextField" binding="HireDateTextField">
         <constraints>
           <grid row="12" column="2" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -189,7 +189,7 @@
           <text value="Fecha de Nacimiento (AAAA/MM/DD)"/>
         </properties>
       </component>
-      <component id="98bb9" class="javax.swing.JTextField" binding="textField7" default-binding="true">
+      <component id="98bb9" class="javax.swing.JTextField" binding="BirthDateTextField">
         <constraints>
           <grid row="14" column="2" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -209,7 +209,7 @@
           <text value="Formacion"/>
         </properties>
       </component>
-      <component id="6d15b" class="javax.swing.JTextField" binding="textField8" default-binding="true">
+      <component id="6d15b" class="javax.swing.JTextField" binding="EducationTextField">
         <constraints>
           <grid row="16" column="2" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -229,7 +229,7 @@
           <text value="Codigo de Registro del Establecimiento"/>
         </properties>
       </component>
-      <component id="3a212" class="javax.swing.JTextField" binding="textField9" default-binding="true">
+      <component id="3a212" class="javax.swing.JTextField" binding="RestaurantTextField">
         <constraints>
           <grid row="18" column="2" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -240,11 +240,13 @@
           <horizontalAlignment value="0"/>
         </properties>
       </component>
-      <component id="abffa" class="javax.swing.JButton" binding="AÑADIRButton" default-binding="true">
+      <component id="abffa" class="javax.swing.JButton" binding="ANHADIRButton">
         <constraints>
           <grid row="20" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="JetBrains Mono ExtraBold"/>
+          <icon value="GUI/Images/agregar.png"/>
           <text value="AÑADIR"/>
         </properties>
       </component>
@@ -262,10 +264,12 @@
           <grid row="20" column="4" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="JetBrains Mono ExtraBold"/>
+          <icon value="GUI/Images/cross.png"/>
           <text value="SALIR"/>
         </properties>
       </component>
-      <component id="8ccd6" class="javax.swing.JTextField" binding="textField4" default-binding="true">
+      <component id="8ccd6" class="javax.swing.JTextField" binding="SalaryTextField">
         <constraints>
           <grid row="8" column="2" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
