--- a/src/GUI/EmployeePage.form
+++ b/src/GUI/EmployeePage.form
@@ -102,6 +102,7 @@
           <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="JetBrains Mono ExtraBold"/>
           <horizontalTextPosition value="0"/>
           <icon value="GUI/Images/alquiler.png"/>
           <text value="Añadir Empleado"/>
@@ -139,6 +140,7 @@
           <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="JetBrains Mono ExtraBold"/>
           <horizontalTextPosition value="0"/>
           <icon value="GUI/Images/comportamiento.png"/>
           <text value="Actualizar Empleado"/>
@@ -151,6 +153,7 @@
           <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="JetBrains Mono ExtraBold"/>
           <horizontalTextPosition value="0"/>
           <icon value="GUI/Images/salario.png"/>
           <text value="Salarios"/>
@@ -173,6 +176,7 @@
           <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="JetBrains Mono ExtraBold"/>
           <horizontalTextPosition value="0"/>
           <icon value="GUI/Images/despedido(1).png"/>
           <text value="Despedir Empleados"/>
