--- a/src/GUI/AddTicket.form
+++ b/src/GUI/AddTicket.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="MainPanel" layout-manager="GridLayoutManager" row-count="10" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="967" height="283"/>
+      <xy x="20" y="20" width="967" height="297"/>
     </constraints>
     <properties>
       <background color="-197121"/>
@@ -78,7 +78,10 @@
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <font name="JetBrains Mono ExtraBold"/>
+          <horizontalAlignment value="0"/>
+        </properties>
       </component>
       <component id="2453c" class="javax.swing.JLabel">
         <constraints>
@@ -95,7 +98,10 @@
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <font name="JetBrains Mono ExtraBold"/>
+          <horizontalAlignment value="0"/>
+        </properties>
       </component>
       <component id="c5ebe" class="javax.swing.JLabel">
         <constraints>
@@ -112,7 +118,10 @@
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <font name="JetBrains Mono ExtraBold"/>
+          <horizontalAlignment value="0"/>
+        </properties>
       </component>
       <vspacer id="1638d">
         <constraints>
