--- a/src/GUI/ShowsPage.form
+++ b/src/GUI/ShowsPage.form
@@ -81,6 +81,7 @@
           <grid row="2" column="2" row-span="2" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="JetBrains Mono ExtraBold"/>
           <horizontalTextPosition value="0"/>
           <icon value="GUI/Images/anhadirTeatro.png"/>
           <text value="Añadir espectaculo"/>
@@ -148,6 +149,18 @@
           <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
+      <component id="bf9fb" class="javax.swing.JButton" binding="añadirEspectaculoButton2" default-binding="true">
+        <constraints>
+          <grid row="4" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="JetBrains Mono ExtraBold"/>
+          <horizontalTextPosition value="0"/>
+          <icon value="GUI/Images/alquiler.png"/>
+          <text value="Añadir Espectaculo"/>
+          <verticalTextPosition value="3"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
