--- a/src/GUI/ShowsPage.form
+++ b/src/GUI/ShowsPage.form
@@ -161,6 +161,18 @@
           <verticalTextPosition value="3"/>
         </properties>
       </component>
+      <component id="c1324" class="javax.swing.JButton" binding="contarEspectadoresButton" default-binding="true">
+        <constraints>
+          <grid row="4" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="JetBrains Mono ExtraBold"/>
+          <horizontalTextPosition value="0"/>
+          <icon value="GUI/Images/hombre.png"/>
+          <text value="Contar Espectadores"/>
+          <verticalTextPosition value="3"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
